sample/src/strategy_pattern/bad/RedDuck.java
package strategy_pattern.bad;

public class RedDuck extends Duck{

  @Override
  void display() {
    System.out.println("빨간색");
  }
}
